revamped cryptographic operations
 - use SodiumHelpers from Androsphinx
 - separate serialization from cryptography
 - store private key only, extract public key on demand

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,3 +32,8 @@ dependencies {
     implementation 'com.github.joshjdevl.libsodiumjni:libsodium-jni-aar:2.0.2'
     implementation 'co.nstant.in:cbor:0.8'
 }
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
+    kotlinOptions {
+        freeCompilerArgs = ["-XXLanguage:+InlineClasses"]
+    }
+}
